More WIP: adding delete functionality

--- a/todo.org
+++ b/todo.org
@@ -1,3 +1,14 @@
 * rdict
+** TODO Refactor to remove need for struct _lvalue
 ** TODO Either copy key string or protect CHARSXP
+** TODO Make key a long instead of int.
+** TODO Investigate storing CHARSXP instead of char*
+Then comparison could be done against CHARSXP pointer.
+And in this case, you could even avoid the hash call and simply
+use the CHARSXP pointer address (or a simple xor hash based on it to
+get to 32bit)
 ** TODO Add collision handling
+** TODO Make hash function pluggable
+** TODO Make max level stored in sl init arg
+** TODO Make pvect size sl init arg
+** TODO Add a stats extraction function
